# Argus---Ai-Code-Review-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  action.yml  action_post_comment.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  railway.toml  render.yaml  requirements.txt  review.bat  start.bat
app/: config.py  main.py
app/api/: auth.py  dashboard.py  health.py  webhooks.py
app/models/: dashboard_schemas.py  database.py  pull_request.py  repository.py  review.py  schemas.py  user.py
app/prompts/: languages.py  review.py  system.py
app/services/: analyzer.py  chunker.py  diff_parser.py  publisher.py  review_pipeline.py
app/services/vcs/: base.py  github_provider.py  local_git.py
cli/: __init__.py  banner.py  config_file.py  db_sync.py  formatters.py  main.py  tui.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: EmptyState.tsx  FindingCard.tsx  Layout.tsx  MiniChart.tsx  RepoCard.tsx  ReviewRow.tsx  SeverityBadge.tsx  Sidebar.tsx  StatCard.tsx
dashboard/src/pages/: Analytics.tsx  Dashboard.tsx  Login.tsx  RepoDetail.tsx  (+3 more)
docs/plans/: 2026-02-09-ai-code-review-design.md  2026-02-23-argus-v2-improvements.md
tests/: conftest.py  test_analyzer.py  test_auth.py  test_chunker.py  test_cli.py  test_config_file.py  test_dashboard_api.py  test_diff_parser.py  test_formatters.py  test_language_hints.py  test_local_git.py  test_new_features.py  test_pr_summary.py  test_publisher.py  test_review_pipeline.py  test_webhooks.py
(+1 files in other folders)
